# ChangeLog for dev-perl/glib-perl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/glib-perl/ChangeLog,v 1.140 2012/07/07 17:16:14 tove Exp $

*glib-perl-1.261.0 (07 Jul 2012)

  07 Jul 2012; Torsten Veller <tove@gentoo.org> +glib-perl-1.261.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  03 Jun 2012; Torsten Veller <tove@gentoo.org> -glib-perl-1.223.ebuild,
  -glib-perl-1.224.0.ebuild, -glib-perl-1.240.0.ebuild,
  -glib-perl-1.241.0.ebuild, -glib-perl-1.250.0.ebuild,
  -glib-perl-1.251.0.ebuild:
  Cleanup

  29 May 2012; Brent Baude <ranger@gentoo.org> glib-perl-1.242.0.ebuild:
  Marking glib-perl-1.242.0 ppc for bug 412995

  28 May 2012; Raúl Porcel <armin76@gentoo.org> glib-perl-1.242.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #412995

*glib-perl-1.260.0 (23 May 2012)

  23 May 2012; Torsten Veller <tove@gentoo.org> +glib-perl-1.260.0.ebuild:
  Version bump

  16 May 2012; Alexis Ballier <aballier@gentoo.org> glib-perl-1.251.0.ebuild:
  keyword ~amd64-fbsd

  05 May 2012; Brent Baude <ranger@gentoo.org> glib-perl-1.251.0.ebuild:
  Marking glib-perl-1.251.0 ppc for bug 412989

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> glib-perl-1.223.ebuild,
  glib-perl-1.224.0.ebuild, glib-perl-1.240.0.ebuild, glib-perl-1.241.0.ebuild,
  glib-perl-1.242.0.ebuild, glib-perl-1.250.0.ebuild, glib-perl-1.251.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  26 Apr 2012; Jeff Horelick <jdhore@gentoo.org> glib-perl-1.242.0.ebuild:
  marked x86 per bug 412995

  26 Apr 2012; Jeroen Roovers <jer@gentoo.org> glib-perl-1.242.0.ebuild:
  Stable for HPPA (bug #412989).

  25 Apr 2012; Markus Meier <maekke@gentoo.org> glib-perl-1.242.0.ebuild:
  arm stable, bug #412995

  23 Apr 2012; Brent Baude <ranger@gentoo.org> glib-perl-1.242.0.ebuild:
  Marking glib-perl-1.242.0 ppc64 for bug 412995
