@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/glib-perl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/glib-perl/ChangeLog,v 1.140 2012/07/07 17:16:14 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/glib-perl/ChangeLog,v 1.141 2012/08/06 11:43:08 tove Exp $
+
+*glib-perl-1.262.0 (06 Aug 2012)
+
+  06 Aug 2012; Torsten Veller <tove@gentoo.org> +glib-perl-1.262.0.ebuild:
+  Version bump
 
 *glib-perl-1.261.0 (07 Jul 2012)
 
